# qrwiz

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/: deploy.yml
src/: config.rs  lib.rs  main.rs
src/config/: mod.rs  output.rs
