[package]
name = "qrwiz"
version = "0.0.1"
authors = ["James Lennon"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
license = "MIT/Apache-2.0"
publish = false

[dependencies]
qrcode-generator = "5"
clap = "4.5"
toml = "0.8"

# TODO: These crates have partial implementations and will probably need some work.
#vcard = "0.4.13"
#ical = "0.11.0"

url = "2.5"
