[package]
name = "qrwiz"
version = "0.0.3"
authors = ["James Lennon"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
license = "MIT/Apache-2.0"
publish = false

[dependencies]
qrcode-generator = "5"                            # QR code tooling
clap = { version = "4.5", features = ["derive"] } # CLI app tooling
url = "2.5"                                       # URL verification

# TODO: These crates have partial implementations and will probably need some work.
#vcard = "0.4.13"
#ical = "0.11.0"

[profile.release]
opt-level = 2
lto = true

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
